Fix too-wide slide carousel on mobile

--- a/style/landing.css
+++ b/style/landing.css
@@ -98,6 +98,9 @@ dialog a {
 ************************************************/
 
 dialog #slide-carousel {
+    /* if not putting 100%, the slide carousel can be too wide on mobile */
+    box-sizing: border-box;
+    width: 100%;
     padding: 0.75rem;
 
     display: flex;
